# SkiaViki

./: .gitignore  .gitmodules  README.md  work.txt
SkiaViki/: GenerateProjects.bat  SkiaViki.sln  build_skia.bat  premake5.lua
SkiaViki/Dependencies/: Dockerfile  build-skia-wasm.bat  compile-skia-wasm.sh
SkiaViki/Dependencies/SDL2-2.0.12/VisualC/SDL/: SDL.vcxproj
SkiaViki/Dependencies/skia-wasm/: Dockerfile  build.bat  compile.sh
SkiaViki/Playground/: HelloWorld.cpp  Playground.cpp  Playground.vcxproj  Playground.vcxproj.filters  SkiaSDLExample.cpp  pch.h
SkiaViki/Research/CMakeDemo-master/: CMakeLists.txt  Main.cpp  demo-config.h
SkiaViki/Research/CMakeDemo-master/include/: App.h  Utilities.h  pch.h
SkiaViki/Research/CMakeDemo-master/src/: App.cpp  Main.cpp  Utilities.cpp  pch.cpp
SkiaViki/Research/hello-skia-wasm/: bash.bat  build.bat  compile.sh  hello.cpp  main.cpp  pch.h  serve.py
SkiaViki/Research/sdl2-skia-wasm/: bash.bat  build.bat  compile.sh  main.cpp  pch.h  serve-debug.bat  serve-release.bat
